...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HWw-gg-84l">
                                <rect key="frame" x="134" y="656" width="107" height="107"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AeH-2s-H5M">
                                        <rect key="frame" x="8" y="8" width="91" height="91"/>
                                        <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" image="camera"/>
                                        <connections>
                                            <action selector="didTakePhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zcK-Re-EkQ"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    <constraint firstItem="AeH-2s-H5M" firstAttribute="centerX" secondItem="HWw-gg-84l" secondAttribute="centerX" id="ntc-2G-1MM"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fuP-Zh-gOM">
                                <rect key="frame" x="34" y="712" width="78" height="31"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Recents">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Recents">
                                            <attributes>
                                                <color key="NSColor" red="0.14585977157360408" green="0.14585977157360408" blue="0.14585977157360408" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <font key="NSFont" metaFont="system" size="20"/>
                                            </attributes>
...
            <objects>
                <tableViewController id="JVN-d2-vjf" customClass="RecentsTableViewController" customModule="What_Are_They_In" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="jXt-A4-0It">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <label key="tableHeaderView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recent Searches" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SSL-Ak-8ce">
                            <rect key="frame" x="0.0" y="0.0" width="375" height="35"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <fontDescription key="fontDescription" type="system" pointSize="21"/>
                            <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <nil key="highlightedColor"/>
                        </label>
...
